sidebar z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -177,6 +177,8 @@ iframe {
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 12px;
     transition: margin-left 750ms var(--redo-easing);
+    position: relative;
+    z-index: 1;
 }
 
 .sidebar[data-sidebar-visible="false"]{
